# claude_metrics

./: README.md  __init__.py  claude_sample_data.md  cli.py  database.py  derived_data_visualizations_plan.md  mcp_server.py  metrics_extractor.py  pyproject.toml  redaction.py  requirements.txt  utils.py
docs/: BRAINSTORM_METRICS_PROMPT.md  CLAUDE_CODE_DATA_SOURCES.md  CLAUDE_CODE_METRICS_CATALOG.md  DERIVED_METRICS_CATALOG.md  IMPLEMENTATION_PLAN.md
extraction/: __init__.py  data_classes.py  time_filtered.py
metrics/: __init__.py  engine.py
metrics/calculators/: __init__.py  base.py  category_a.py  category_b.py  category_c.py  category_d.py  category_e.py  category_f.py  category_g.py  category_h.py  category_i.py  category_j.py  helpers.py
metrics/definitions/: __init__.py  base.py  category_a.py  category_b.py  category_c.py  category_d.py  category_e.py  category_f.py  category_g.py  category_h.py  category_i.py  category_j.py
sources/: __init__.py  base.py  cache.py  claude_md.py  credentials.py  debug_logs.py  environment.py  extensions.py  file_history.py  global_state.py  history.py  mcp_config.py  mcp_logs.py  plans.py  project_config.py  session_env.py  sessions.py  settings.py  shell_snapshots.py  sqlite_store.py  stats_cache.py  statusline.py  todos.py  versions.py
tests/: __init__.py  conftest.py  test_extractor.py  test_mcp_server.py  test_regressions.py  test_utils.py
visualizations/: __init__.py
visualizations/html/: __init__.py  generator.py
visualizations/terminal/: __init__.py  components.py  report.py  themes.py
(+10 files in other folders)
